# whoami-LLM

./: .gitignore  .gitmodules  Makefile  README.md
apps/minio/: values.yaml
apps/minio/scripts/: access.sh
apps/weaviate/: README.md  values.yaml
apps/weaviate/python/: requirements.txt  test_embedding_to_weaviate.py
apps/weaviate/scripts/: access.sh  install.sh  run-test.sh  setup-python.sh  uninstall.sh
apps/whoami-llm/: README.md  llama-cli-cpu  pyproject.toml
apps/whoami-llm/src/whoami_llm/: __init__.py  cli.py
apps/whoami-llm/src/whoami_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/whoami-llm/src/whoami_llm/embedding/: faiss_builder.py
apps/whoami-llm/src/whoami_llm/extract/: velog_rss_description.py
apps/whoami-llm/src/whoami_llm/llm/: __init__.py  hf_gguf.py  llama_cli_runner.py
apps/whoami-llm/src/whoami_llm/search/: faiss_searcher.py
apps/whoami-llm/src/whoami_llm/storage/: index_store.py
